# maisobs

./: .gitattributes  .gitignore  README.md
.github/actions/build-plugin/: action.yaml
.github/actions/package-plugin/: action.yaml
.github/scripts/: Build-Windows.ps1  Package-Windows.ps1  build-macos  build-ubuntu  package-macos  package-ubuntu
.github/workflows/: build-project.yaml  dispatch.yaml  pr-pull.yaml  push.yaml
obs-scene-multistream/: CMakeLists.txt  README.md  buildspec.json
obs-scene-multistream/data/locale/: en-US.ini
obs-scene-multistream/src/: config.cpp  config.hpp  destination.hpp  multistream-manager.cpp  multistream-manager.hpp  plugin-main.cpp  plugin-support.c.in  plugin-support.h
obs-scene-multistream/src/api/: http-client.cpp
obs-scene-multistream/src/oauth/: oauth-flow.cpp  oauth-flow.hpp  platform-manager.cpp  platform-manager.hpp  token-store.cpp  token-store.hpp
obs-scene-multistream/src/oauth/providers/: twitch.cpp  twitch.hpp
obs-scene-multistream/src/ui/: destination-dialog.cpp  destination-dialog.hpp  multistream-dock.cpp  multistream-dock.hpp  oauth-settings-dialog.cpp  oauth-settings-dialog.hpp
obs-stream-sync/: CMakeLists.txt  README.md  buildspec.json
obs-stream-sync/data/locale/: en-US.ini
obs-stream-sync/src/: plugin-main.cpp
obs-stream-sync/src/api/: http-client.cpp  http-client.hpp
obs-stream-sync/src/oauth/: oauth-flow.cpp  oauth-flow.hpp  token-store.cpp  token-store.hpp
obs-stream-sync/src/oauth/providers/: twitch.cpp  twitch.hpp
obs-stream-sync/src/ui/: sync-dock.cpp  sync-dock.hpp
